Few small style changes - cell alignment, fix modification code

--- a/public/content/site.css
+++ b/public/content/site.css
@@ -82,6 +82,9 @@ a {
     background-color: #f5f5f5; width:85%;
     word-wrap: break-word;
 }
+.align-right {
+    text-align: right;
+}
 #searchForm {
     margin: 15px 15px 5px 15px;
 }
